test/files/neg/t2779.check
t2779.scala:16: error: method f is defined twice in t2779.scala
    override def f = List(M1)
                 ^
one error found
